# tributo

./: .env.example  .gitignore  .vercelignore  CodePlain-SPEC.md  README.md  pyproject.toml  vercel.json
UI/: .thumbnail  base.css  config.js  gov.html  index.html  styles.css
UI/_ds/pecan-design-system-0ae68c7f-9d08-4aaf-9c11-e2d00dc9c28a/: _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  styles.css
UI/components/core/: Avatar.d.ts  Avatar.jsx  Avatar.prompt.md  Badge.d.ts  Badge.jsx  Badge.prompt.md  Button.d.ts  Button.jsx  Button.prompt.md  Card.d.ts  Card.jsx  Card.prompt.md  Input.d.ts  Input.jsx  Input.prompt.md  (+4 more)
UI/guidelines/: advisor-state-spec.md  brand-advisor.card.html  brand-focus.card.html  brand-logo.card.html  color-blue.card.html  color-paper.card.html  color-semantic.card.html  color-signal.card.html  iconography.md  spacing-radius.card.html  spacing-scale.card.html  type-body.card.html  type-display.card.html
UI/tokens/: colors.css  effects.css  fonts.css  motion.css  spacing.css  typography.css
app/: __init__.py  accountability.py  actions.py  agentic.py  audit.py  config.py  flock.py  guardrails.py  main.py  plans.py  redaction.py  retrieval.py  schemas.py  tokenization.py
app/corpus/: __init__.py  facts.py  sources.py
app/federated/: __init__.py  data.py  fedavg.py
app/voice/: __init__.py  agent.py  token.py
screenshots/: console
scripts/: run_flockit.md
tests/: test_actions.py  test_agentic.py  test_federated.py  test_redaction.py  test_retrieval.py
web/: app.js  gov.html  gov.js  index.html  shared.js  styles.css
(+32 files in other folders)
