[project]
name = "tributo"
version = "0.1.0"
description = "Sovereign, privacy-preserving, auditable UK tax guidance on FLock's decentralised AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sse-starlette>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
# Stronger, ICO-aligned PII detection (NER). Needs: python -m spacy download en_core_web_lg
presidio = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
# Semantic retrieval instead of BM25 (pulls torch; heavier).
embeddings = ["sentence-transformers>=3.0"]
# Real-time voice advisor: LiveKit Agents + Deepgram STT + ElevenLabs TTS.
voice = [
    "livekit-api>=0.8",
    "livekit-agents[openai,deepgram,elevenlabs,silero,turn-detector]>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
